--- a/templates/docs/examples/base/forms/aligned-checkboxes.html
+++ b/templates/docs/examples/base/forms/aligned-checkboxes.html
@@ -29,7 +29,7 @@
     <input type="checkbox" id="checkExample7">
     <label for="checkExample7" class="is-muted-heading">Muted heading</label>
   </div>
-  <table>
+  <table aria-label="Example of checkboxes inside table cells">
     <thead>
       <tr>
         <th>
