--- a/templates/docs/examples/base/forms/aligned-radio.html
+++ b/templates/docs/examples/base/forms/aligned-radio.html
@@ -29,7 +29,7 @@
     <input type="radio" name="RadioOptions" id="Radio6" value="option1" checked>
     <label for="Radio6" class="is-muted-heading">Muted heading</label>
   </div>
-  <table>
+  <table aria-label="Example of radio buttons inside a table">
     <thead>
       <tr>
         <th>
