--- a/templates/docs/examples/base/table.html
+++ b/templates/docs/examples/base/table.html
@@ -4,7 +4,7 @@
 {% block standalone_css %}base{% endblock %}
 
 {% block content %}
-<table>
+<table aria-label="Vanilla framework table example">
   <thead>
     <tr>
       <th></th>
