--- a/templates/docs/examples/layouts/application-structure.html
+++ b/templates/docs/examples/layouts/application-structure.html
@@ -23,7 +23,7 @@
       <button class="js-aside-toggle">Toggle aside panel</button>
     </p>
 
-    <table>
+    <table aria-label="Table with demo content">
       <thead>
         <tr>
           <th></th>
