--- a/templates/docs/examples/layouts/application.html
+++ b/templates/docs/examples/layouts/application.html
@@ -52,16 +52,16 @@
       </div>
       <div class="p-panel__content">
         <div class="u-fixed-width">
-          <table class="p-main-table">
+          <table aria-label="JAAS table example" class="p-main-table">
             <thead>
               <tr>
-                <th role="columnheader"><span class="status-icon is-blocked">Blocked (3)</span></th>
-                <th role="columnheader"></th>
-                <th role="columnheader">Owner</th>
-                <th role="columnheader">Cloud/Region</th>
-                <th role="columnheader">Credential</th>
-                <th role="columnheader">Controller</th>
-                <th role="columnheader" class="u-align--right">Last Updated</th>
+                <th><span class="status-icon is-blocked">Blocked (3)</span></th>
+                <th></th>
+                <th>Owner</th>
+                <th>Cloud/Region</th>
+                <th>Credential</th>
+                <th>Controller</th>
+                <th class="u-align--right">Last Updated</th>
               </tr>
             </thead>
             <tbody>
@@ -136,16 +136,16 @@
               </tr>
             </tbody>
           </table>
-          <table class="p-main-table">
+          <table aria-label="JAAS table example" class="p-main-table">
             <thead>
               <tr>
-                <th role="columnheader"><span class="status-icon is-alert">Alert (2)</span></th>
-                <th role="columnheader"></th>
-                <th role="columnheader">Owner</th>
-                <th role="columnheader">Cloud/Region</th>
-                <th role="columnheader">Credential</th>
-                <th role="columnheader">Controller</th>
-                <th role="columnheader" class="u-align--right">Last Updated</th>
+                <th><span class="status-icon is-alert">Alert (2)</span></th>
+                <th></th>
+                <th>Owner</th>
+                <th>Cloud/Region</th>
+                <th>Credential</th>
+                <th>Controller</th>
+                <th class="u-align--right">Last Updated</th>
               </tr>
             </thead>
             <tbody>
@@ -197,16 +197,16 @@
               </tr>
             </tbody>
           </table>
-          <table class="p-main-table">
+          <table aria-label="JAAS table example" class="p-main-table">
             <thead>
               <tr>
-                <th role="columnheader"><span class="status-icon is-running">Running (3)</span></th>
-                <th role="columnheader"></th>
-                <th role="columnheader">Owner</th>
-                <th role="columnheader">Cloud/Region</th>
-                <th role="columnheader">Credential</th>
-                <th role="columnheader">Controller</th>
-                <th role="columnheader" class="u-align--right">Last Updated</th>
+                <th><span class="status-icon is-running">Running (3)</span></th>
+                <th></th>
+                <th>Owner</th>
+                <th>Cloud/Region</th>
+                <th>Credential</th>
+                <th>Controller</th>
+                <th class="u-align--right">Last Updated</th>
               </tr>
             </thead>
             <tbody>
