--- a/templates/docs/examples/layouts/documentation.html
+++ b/templates/docs/examples/layouts/documentation.html
@@ -137,7 +137,7 @@
       </ul>
 
       <h3>Tables</h3>
-      <table>
+      <table aria-label="MAAS table example">
         <thead>
           <tr>
             <th>Interface name</th>
