--- a/templates/docs/examples/patterns/forms/tick-comparison.html
+++ b/templates/docs/examples/patterns/forms/tick-comparison.html
@@ -40,7 +40,7 @@
       alongside some text
     </p>
 
-    <table>
+    <table aria-label="Checkbox in table example">
       <thead>
         <tr>
           <th>
@@ -147,7 +147,7 @@
       alongside some text
     </p>
 
-    <table>
+    <table aria-label="Radio button in table example">
       <thead>
         <tr>
           <th>
