--- a/templates/docs/examples/patterns/tables/table-colored-rows.html
+++ b/templates/docs/examples/patterns/tables/table-colored-rows.html
@@ -4,7 +4,7 @@
 {% block standalone_css %}base{% endblock %}
 
 {% block content %}
-<table>
+<table aria-label="Example of a table with tinted rows">
   <thead>
     <tr>
       <th></th>
