add aria-labels to tables

--- a/templates/docs/examples/templates/maas-docs-grid.html
+++ b/templates/docs/examples/templates/maas-docs-grid.html
@@ -238,7 +238,7 @@
       </p>
 
       <div class="md-table">
-        <table>
+        <table aria-label="MAAS table example">
           <thead>
             <tr>
               <th></th>
