--- a/templates/docs/examples/templates/maas-layout.html
+++ b/templates/docs/examples/templates/maas-layout.html
@@ -125,7 +125,7 @@
         <button type="reset" class="p-search-box__reset" alt="reset"><i class="p-icon--close"></i></button>
         <button type="submit" class="p-search-box__button" alt="search"><i class="p-icon--search"></i></button>
       </form>
-      <table class="p-table--mobile-card">
+      <table aria-label="MAAS table example" class="p-table--mobile-card">
         <thead>
           <tr>
             <th>FQDN | MAC</th>
