--- a/templates/docs/examples/templates/tick-element-comparison.html
+++ b/templates/docs/examples/templates/tick-element-comparison.html
@@ -72,7 +72,7 @@
 
 <div class="p-strip is-shallow u-no-padding--top">
   <div class="u-fixed-width">
-    <table class="p-table--mobile-card">
+    <table aria-label="Example of a table that is rendered as a series of cards on small screens" class="p-table--mobile-card">
       <thead>
         <tr>
           <th>
