--- a/templates/docs/examples/utilities/table-cell-padding-overlap.html
+++ b/templates/docs/examples/utilities/table-cell-padding-overlap.html
@@ -2,7 +2,7 @@
 {% block title %}Table cell padding overlap{% endblock %}
 
 {% block content %}
-<table>
+<table aria-label="Table featuring elements that stretch into the cell padding">
   <tbody>
     <tr>
         <td><button class="u-table-cell-padding-overlap">Select</button></td>
