--- a/templates/docs/examples/utilities/truncate.html
+++ b/templates/docs/examples/utilities/truncate.html
@@ -2,7 +2,7 @@
 {% block title %}Truncate text{% endblock %}
 
 {% block content %}
-<table>
+<table aria-label="Table example demonstrating how to use Vanilla's truncation utility">
     <thead>
       <tr>
         <th>FQDN</th>
