remove dulpicate margin on p-search-box

--- a/scss/_patterns_navigation.scss
+++ b/scss/_patterns_navigation.scss
@@ -237,7 +237,7 @@ $lightness-threshold: 70;
     // p-search-box overrides
     .p-search-box {
       flex: 1 0 auto;
-      margin: -1px 0 $spv-inner--small 0;
+      margin-top: -1px;
       min-width: 10em;
       order: -1;
 
@@ -257,7 +257,7 @@ $lightness-threshold: 70;
 
         display: flex;
         flex: 1 1 auto;
-        margin: $input-gap-top map-get($grid-margin-widths, large) auto auto;
+        margin: $input-gap-top 0 auto auto;
         max-width: 20rem;
         min-width: initial;
         order: 1;
