update sort selector

--- a/scss/_patterns_table-sortable.scss
+++ b/scss/_patterns_table-sortable.scss
@@ -21,7 +21,7 @@
     table-layout: fixed;
 
     // stylelint-disable selector-no-qualifying-type
-    th[role='columnheader'] {
+    thead th {
       &[aria-sort] {
         align-items: center;
         cursor: pointer;
