add aria labels, some code cleanup

--- a/templates/docs/examples/patterns/tables/table-expanding.html
+++ b/templates/docs/examples/patterns/tables/table-expanding.html
@@ -4,7 +4,7 @@
 {% block standalone_css %}patterns_table-expanding{% endblock %}
 
 {% block content %}
-<table class="p-table-expanding" >
+<table class="p-table-expanding" aria-label="Example of expanding table">
     <thead>
         <tr>
             <th id="t-name" aria-sort="none">Name</th>
@@ -20,7 +20,7 @@
     </thead>
     <tbody>
         <tr>
-            <td role="rowheader" aria-label="Name">Unknown</td>
+            <td aria-label="Name">Unknown</td>
             <td aria-label="Users">2c:44:fd:80:3f:25</td>
             <td aria-label="Units">10.249.0.1</td>
             <td aria-label="Units">karura</td>
@@ -41,7 +41,7 @@
             </td>
         </tr>
         <tr>
-            <td role="rowheader" aria-label="Name">Unknown</td>
+            <td aria-label="Name">Unknown</td>
             <td aria-label="Users">52:54:00:3a:fe:e9</td>
             <td aria-label="Units">172.16.99.191</td>
             <td aria-label="Units">karura</td>
@@ -62,7 +62,7 @@
             </td>
         </tr>
         <tr>
-            <td role="rowheader" aria-label="Name">Unknown</td>
+            <td aria-label="Name">Unknown</td>
             <td aria-label="Users">52:54:00:74:c2:10</td>
             <td aria-label="Units">172.16.99.192</td>
             <td aria-label="Units">karura</td>
