--- a/templates/docs/examples/patterns/tables/table-mobile-card.html
+++ b/templates/docs/examples/patterns/tables/table-mobile-card.html
@@ -4,7 +4,7 @@
 {% block standalone_css %}patterns_table-mobile-card{% endblock %}
 
 {% block content %}
-<table class="p-table--mobile-card" >
+<table class="p-table--mobile-card" aria-label="Example of table transforming into mobile cards on small screens">
   <thead>
     <tr>
       <th>FQDN</th>
@@ -20,48 +20,48 @@
   </thead>
   <tbody>
     <tr>
-      <td role="rowheader" aria-label="FQDN">LongEnoughToCauseEllipsis</td>
+      <td aria-label="Test of a long label that will cause truncation">LongEnoughToCauseEllipsis</td>
       <td aria-label="Power">On</td>
       <td aria-label="Status">Failed testing</td>
       <td aria-label="Owner">Caleb</td>
       <td aria-label="Zone">london</td>
-      <td class="u-align--right"  aria-label="Cores">4</td>
-      <td class="u-align--right"  aria-label="RAM">2 GiB</td>
-      <td class="u-align--right"  aria-label="Disks">1</td>
-      <td class="u-align--right"  aria-label="Storagelongenoughtocauseellipsis">2TB</td>
+      <td class="u-align--right" aria-label="Cores">4</td>
+      <td class="u-align--right" aria-label="RAM">2 GiB</td>
+      <td class="u-align--right" aria-label="Disks">1</td>
+      <td class="u-align--right" aria-label="Storage_long_enough_to_cause_ellipsis">2TB</td>
     </tr>
     <tr>
-      <td role="rowheader" aria-label="FQDN">upward-muskox</td>
+      <td aria-label="FQDN">upward-muskox</td>
       <td aria-label="Power">Off</td>
       <td aria-label="Status">Allocated</td>
       <td aria-label="Owner">sparkiegeek</td>
       <td aria-label="Zone">london</td>
-      <td class="u-align--right"  aria-label="Cores">6</td>
-      <td class="u-align--right"  aria-label="RAM">4 GiB</td>
-      <td class="u-align--right"  aria-label="Disks">1</td>
-      <td class="u-align--right"  aria-label="Storage this is long enough to cause wrapping">500GB</td>
+      <td class="u-align--right" aria-label="Cores">6</td>
+      <td class="u-align--right" aria-label="RAM">4 GiB</td>
+      <td class="u-align--right" aria-label="Disks">1</td>
+      <td class="u-align--right" aria-label="Storage this is long enough to cause wrapping">500GB</td>
     </tr>
     <tr>
-      <td role="rowheader" aria-label="FQDN">first-cattle</td>
+      <td aria-label="FQDN">first-cattle</td>
       <td aria-label="Power">On</td>
       <td aria-label="Status">Failed to enter rescue mode</td>
       <td aria-label="Owner">admin</td>
       <td aria-label="Zone">london</td>
-      <td class="u-align--right"  aria-label="Cores">8</td>
-      <td class="u-align--right"  aria-label="RAM">16 GiB</td>
-      <td class="u-align--right"  aria-label="Disks">3</td>
-      <td class="u-align--right"  aria-label="Storage this is long enough to cause wrapping">6TB</td>
+      <td class="u-align--right" aria-label="Cores">8</td>
+      <td class="u-align--right" aria-label="RAM">16 GiB</td>
+      <td class="u-align--right" aria-label="Disks">3</td>
+      <td class="u-align--right" aria-label="Storage this is long enough to cause wrapping">6TB</td>
     </tr>
     <tr>
-      <td role="rowheader" aria-label="FQDN">golden-rodent</td>
+      <td aria-label="FQDN">golden-rodent</td>
       <td aria-label="Power">Off</td>
       <td aria-label="Status">Broken</td>
       <td aria-label="Owner">&mdash;</td>
       <td aria-label="Zone">london</td>
-      <td class="u-align--right"  aria-label="Cores">2</td>
-      <td class="u-align--right"  aria-label="RAM">1 GiB</td>
-      <td class="u-align--right"  aria-label="Disks">1</td>
-      <td class="u-align--right"  aria-label="Storage this is long enough to cause wrapping">240GB</td>
+      <td class="u-align--right" aria-label="Cores">2</td>
+      <td class="u-align--right" aria-label="RAM">1 GiB</td>
+      <td class="u-align--right" aria-label="Disks">1</td>
+      <td class="u-align--right" aria-label="Storage this is long enough to cause wrapping">240GB</td>
     </tr>
   </tbody>
 </table>
