update aria labels and cell values to avoid inability to ellipsize cell text

--- a/templates/docs/examples/patterns/tables/table-mobile-card.html
+++ b/templates/docs/examples/patterns/tables/table-mobile-card.html
@@ -20,7 +20,7 @@
   </thead>
   <tbody>
     <tr>
-      <td aria-label="Test of a long label that will cause truncation">LongEnoughToCauseEllipsis</td>
+      <td aria-label="Test of a long label that will cause wrapping">Long wrapping value</td>
       <td aria-label="Power">On</td>
       <td aria-label="Status">Failed testing</td>
       <td aria-label="Owner">Caleb</td>
@@ -28,7 +28,7 @@
       <td class="u-align--right" aria-label="Cores">4</td>
       <td class="u-align--right" aria-label="RAM">2 GiB</td>
       <td class="u-align--right" aria-label="Disks">1</td>
-      <td class="u-align--right" aria-label="Storage_long_enough_to_cause_ellipsis">2TB</td>
+      <td class="u-align--right" aria-label="Storage">2TB</td>
     </tr>
     <tr>
       <td aria-label="FQDN">upward-muskox</td>
@@ -39,7 +39,7 @@
       <td class="u-align--right" aria-label="Cores">6</td>
       <td class="u-align--right" aria-label="RAM">4 GiB</td>
       <td class="u-align--right" aria-label="Disks">1</td>
-      <td class="u-align--right" aria-label="Storage this is long enough to cause wrapping">500GB</td>
+      <td class="u-align--right" aria-label="Storage">500GB</td>
     </tr>
     <tr>
       <td aria-label="FQDN">first-cattle</td>
@@ -50,7 +50,7 @@
       <td class="u-align--right" aria-label="Cores">8</td>
       <td class="u-align--right" aria-label="RAM">16 GiB</td>
       <td class="u-align--right" aria-label="Disks">3</td>
-      <td class="u-align--right" aria-label="Storage this is long enough to cause wrapping">6TB</td>
+      <td class="u-align--right" aria-label="Storage">6TB</td>
     </tr>
     <tr>
       <td aria-label="FQDN">golden-rodent</td>
@@ -61,7 +61,7 @@
       <td class="u-align--right" aria-label="Cores">2</td>
       <td class="u-align--right" aria-label="RAM">1 GiB</td>
       <td class="u-align--right" aria-label="Disks">1</td>
-      <td class="u-align--right" aria-label="Storage this is long enough to cause wrapping">240GB</td>
+      <td class="u-align--right" aria-label="Storage">240GB</td>
     </tr>
   </tbody>
 </table>
