add aria-label to sortable table

--- a/templates/docs/examples/patterns/tables/table-sortable.html
+++ b/templates/docs/examples/patterns/tables/table-sortable.html
@@ -4,7 +4,7 @@
 {% block standalone_css %}patterns_table-sortable{% endblock %}
 
 {% block content %}
-<table class="p-table--sortable" >
+<table class="p-table--sortable" aria-label="Example of a sortable table">
   <thead>
     <tr>
       <th id="t-name" aria-sort="none">Status</th>
