move styles to head

--- a/templates/docs/examples/layouts/application-structure.html
+++ b/templates/docs/examples/layouts/application-structure.html
@@ -1,6 +1,12 @@
 {% extends "_layouts/examples.html" %}
 {% block title %}Application / Structure{% endblock %}
 
+{% block style %}
+<style>
+  body { margin: 0; }
+</style>
+{% endblock %}
+
 {% block content %}
 <div class="l-application app-demo" role="presentation">
   <div class="l-navigation-bar">
@@ -66,14 +72,6 @@
     <code>l-status</code>
   </aside>
 </div>
-
-
-
-
-
-<style>
-  body { margin: 0; }
-</style>
 
 <script>
   document.querySelector(".js-menu-toggle").addEventListener("click", function() {
