--- a/templates/docs/examples/patterns/side-navigation/dark.html
+++ b/templates/docs/examples/patterns/side-navigation/dark.html
@@ -3,9 +3,12 @@
 
 {% block standalone_css %}patterns_side-navigation{% endblock %}
 
+{% block style %}
+<style>body { background: #111 }</style>
+{% endblock %}
+
 {% block content %}
 {% set is_dark = True %}
-<style>body { background: #111 }</style>
 
 <div class="row">
   <div class="col-4">
