--- a/templates/docs/examples/templates/maas-docs-grid.html
+++ b/templates/docs/examples/templates/maas-docs-grid.html
@@ -1,6 +1,12 @@
 {% extends "_layouts/examples.html" %}
 {% block title %}MAAS docs / Grid layout{% endblock %}
 
+{% block style %}
+<style>
+  body { margin: 0; }
+</style>
+{% endblock %}
+
 {% block content %}
 <header id="navigation" class="p-navigation is-dark">
   <div class="p-navigation__row row">
@@ -333,9 +339,5 @@
   {% include "docs/examples/patterns/side-navigation/_example_script.js" %}
   {% include "docs/examples/patterns/side-navigation/_toggle_script.js" %}
 </script>
-
-<style>
-  body { margin: 0; }
-</style>
 
 {% endblock %}
