--- a/templates/docs/examples/templates/maas-docs.html
+++ b/templates/docs/examples/templates/maas-docs.html
@@ -1,8 +1,9 @@
 {% extends "_layouts/examples.html" %}
 {% block title %}MAAS docs / Custom docs layout{% endblock %}
 
-{% block content %}
+{% block style %}
 <style>
+
   .l-docs-wrapper {
       border-bottom: 1px solid #cdcdcd
   }
@@ -79,6 +80,9 @@
       }
   }
 </style>
+{% endblock %}
+
+{% block content %}
 
 <header id="navigation" class="p-navigation is-dark">
   <div class="p-navigation__row row">
