--- a/templates/docs/examples/templates/snapcraft-publicise.html
+++ b/templates/docs/examples/templates/snapcraft-publicise.html
@@ -1,7 +1,7 @@
 {% extends "_layouts/examples.html" %}
 {% block title %}Snapcraft publicise page{% endblock %}
 
-{% block content %}
+{% block style %}
 <style>
   @media only screen and (min-width: 1030px) {
       .l-docs-title,.l-docs-title[class^='p-strip'] {
@@ -22,6 +22,9 @@
       padding-bottom: 1rem
   }
 </style>
+{% endblock %}
+
+{% block content %}
 
 <header id="navigation" class="p-navigation is-dark">
   <div class="p-navigation__row">
