--- a/templates/docs/examples/templates/typographic-spacing.html
+++ b/templates/docs/examples/templates/typographic-spacing.html
@@ -1,7 +1,7 @@
 {% extends "_layouts/examples.html" %}
 {% block title %}Typographic spacing{% endblock %}
 
-{% block content %}
+{% block style %}
 <style>
   .flex-container {
     display: flex;
@@ -11,6 +11,9 @@
     max-width: 100vw;
   }
 </style>
+{% endblock %}
+
+{% block content %}
 <!-- h1+others -->
 <div class="flex-container">
   <div class="flex-col">
