--- a/templates/docs/examples/layouts/documentation.html
+++ b/templates/docs/examples/layouts/documentation.html
@@ -1,6 +1,12 @@
 {% extends "_layouts/examples.html" %}
 {% block title %}Documentation{% endblock %}
 
+{% block style %}
+<style>
+  body { margin: 0; }
+</style>
+{% endblock %}
+
 {% block content %}
 {% include "docs/examples/layouts/_global-nav.html" %}
 
@@ -272,7 +278,4 @@
   {% include "docs/examples/patterns/side-navigation/_toggle_script.js" %}
 </script>
 
-<style>
-  body { margin: 0; }
-</style>
 {% endblock %}
