--- a/templates/docs/examples/patterns/grid/responsive.html
+++ b/templates/docs/examples/patterns/grid/responsive.html
@@ -3,7 +3,7 @@
 
 {% block standalone_css %}patterns_grid{% endblock %}
 
-{% block content %}
+{% block style %}
 <style>
 [class*='col-']::before {
   content: attr(class);
