--- a/scss/_patterns_table-icons.scss
+++ b/scss/_patterns_table-icons.scss
@@ -2,11 +2,14 @@
 
 @mixin vf-p-table-icons {
   .p-table__cell--with-icon {
-    padding-left: 1.5rem;
+    $table-icon-size: map-get($icon-sizes, default);
+    $table-icon-margin: $sph-inner--small;
+
+    padding-left: $sph-inner--small + $table-icon-size + $table-icon-margin;
 
     [class^='p-icon']:first-child {
-      margin-left: -1.5rem;
-      margin-right: 0.5rem;
+      margin-left: -($table-icon-size + $table-icon-margin);
+      margin-right: $table-icon-margin;
     }
   }
 }
