remove uninformative aria-labels

--- a/templates/docs/examples/templates/maas-layout.html
+++ b/templates/docs/examples/templates/maas-layout.html
@@ -57,7 +57,7 @@
             aria-haspopup="true">
             Change pool <i class="p-icon--contextual-menu"></i>
           </a>
-          <span class="p-contextual-menu__dropdown" id="menu" aria-hidden="true" aria-label="submenu">
+          <span class="p-contextual-menu__dropdown" id="menu" aria-hidden="true">
             <span class="p-contextual-menu__group">
               <a href="#" class="p-contextual-menu__link">Link</a>
               <a href="#" class="p-contextual-menu__link">Link</a>
