--- a/templates/docs/examples/patterns/contextual-menu/default.html
+++ b/templates/docs/examples/patterns/contextual-menu/default.html
@@ -6,7 +6,7 @@
 {% block content %}
 <span class="p-contextual-menu--left">
     <button class="p-contextual-menu__toggle" aria-controls="menu-3" aria-expanded="false" aria-haspopup="true">Take action</button>
-    <span class="p-contextual-menu__dropdown" id="menu-3" aria-hidden="true" aria-label="submenu">
+    <span class="p-contextual-menu__dropdown" id="menu-3" aria-hidden="true">
         <span class="p-contextual-menu__group">
             <a href="#" class="p-contextual-menu__link">Commission</a>
             <a href="#" class="p-contextual-menu__link">Aquire</a>
@@ -22,7 +22,7 @@
 
 <p>Lorem ipsum dolor sit amet consectetur adipiscing elit <span class="p-contextual-menu--left">
     <a href="#" class="p-contextual-menu__toggle" aria-controls="menu-4" aria-expanded="true" aria-haspopup="true">take action left</a>
-    <span class="p-contextual-menu__dropdown" id="menu-4" aria-hidden="false" aria-label="submenu">
+    <span class="p-contextual-menu__dropdown" id="menu-4" aria-hidden="false">
         <span class="p-contextual-menu__group">
           <a href="#" class="p-contextual-menu__link">Commission</a>
           <a href="#" class="p-contextual-menu__link">Aquire</a>
@@ -36,7 +36,7 @@
     </span>
 </span> nunc dolor. Arcu molestie non arcu porttitor <span class="p-contextual-menu--center">
     <a href="#" class="p-contextual-menu__toggle" aria-controls="menu-5" aria-expanded="false" aria-haspopup="true">take action center</a>
-    <span class="p-contextual-menu__dropdown" id="menu-5" aria-hidden="true" aria-label="submenu">
+    <span class="p-contextual-menu__dropdown" id="menu-5" aria-hidden="true">
         <span class="p-contextual-menu__group">
           <a href="#" class="p-contextual-menu__link">Commission</a>
           <a href="#" class="p-contextual-menu__link">Aquire</a>
@@ -50,7 +50,7 @@
     </span>
 </span> volutpat rutrum ipsum nunc lacus ligula ornare et diam <span class="p-contextual-menu">
     <a href="#" class="p-contextual-menu__toggle" aria-controls="menu-6" aria-expanded="false" aria-haspopup="true">take action right</a>
-    <span class="p-contextual-menu__dropdown" id="menu-6" aria-hidden="true" aria-label="submenu">
+    <span class="p-contextual-menu__dropdown" id="menu-6" aria-hidden="true">
         <span class="p-contextual-menu__group">
           <a href="#" class="p-contextual-menu__link">Commission</a>
           <a href="#" class="p-contextual-menu__link">Aquire</a>
