--- a/templates/docs/examples/templates/z-index.html
+++ b/templates/docs/examples/templates/z-index.html
@@ -87,7 +87,7 @@
     Lorem ipsum dolor sit amet consectetur adipiscing elit
     <span class="p-contextual-menu--left">
       <a href="#" class="p-contextual-menu__toggle" aria-controls="menu-4" aria-expanded="true" aria-haspopup="true">take action left</a>
-      <span class="p-contextual-menu__dropdown" id="menu-4" aria-hidden="false" aria-label="submenu">
+      <span class="p-contextual-menu__dropdown" id="menu-4" aria-hidden="false">
         <span class="p-contextual-menu__group">
           <a href="#" class="p-contextual-menu__link">Commission</a>
           <a href="#" class="p-contextual-menu__link">Aquire</a>
@@ -103,7 +103,7 @@
     nunc dolor. Arcu molestie non arcu porttitor
     <span class="p-contextual-menu--center">
       <a href="#" class="p-contextual-menu__toggle" aria-controls="menu-5" aria-expanded="false" aria-haspopup="true">take action center</a>
-      <span class="p-contextual-menu__dropdown" id="menu-5" aria-hidden="true" aria-label="submenu">
+      <span class="p-contextual-menu__dropdown" id="menu-5" aria-hidden="true">
         <span class="p-contextual-menu__group">
           <a href="#" class="p-contextual-menu__link">Commission</a>
           <a href="#" class="p-contextual-menu__link">Aquire</a>
@@ -119,7 +119,7 @@
     volutpat rutrum ipsum nunc lacus ligula ornare et diam
     <span class="p-contextual-menu">
       <a href="#" class="p-contextual-menu__toggle" aria-controls="menu-6" aria-expanded="false" aria-haspopup="true">take action right</a>
-      <span class="p-contextual-menu__dropdown" id="menu-6" aria-hidden="true" aria-label="submenu">
+      <span class="p-contextual-menu__dropdown" id="menu-6" aria-hidden="true">
         <span class="p-contextual-menu__group">
           <a href="#" class="p-contextual-menu__link">Commission</a>
           <a href="#" class="p-contextual-menu__link">Aquire</a>
